tests/negative/Internal/FunctionApplied.juvix
module FunctionApplied;

type T (A : Type) :=
  | c : A → T A;

f : {A : Type} → A → T A
  | {A} a := c {(A → A) A} a;
